fix: destroy recurrence classes
