# src/shared/useCases/calendar/class/schema.ts
@@ -36,9 +36,5 @@ export const listAppointmentsSchema = joi.object({
 
 export const destroySchema = joi.object({
   id: joi.string().uuid().required(),
-  date: joi.string().isoDate().when('following', {
-    is: true,
-    then: joi.string().required()
-  }),
   following: joi.boolean()
 })
